--- a/aes-gcm/Cargo.toml
+++ b/aes-gcm/Cargo.toml
@@ -16,9 +16,9 @@ keywords = ["aead", "aes", "encryption", "gcm", "ghash"]
 categories = ["cryptography", "no-std"]
 
 [dependencies]
-aead = { version = "= 0.3.0-pre", default-features = false }
-aes = { version = "= 0.4.0-pre", optional = true }
-block-cipher = "= 0.7.0-pre"
+aead = { version = "0.3", default-features = false }
+aes = { version = "0.4", optional = true }
+block-cipher = "0.7"
 ghash = { version = "0.3.0-pre", default-features = false }
 subtle = { version = "2", default-features = false }
 zeroize = { version = "1", optional = true, default-features = false }
