--- a/xsalsa20poly1305/Cargo.toml
+++ b/xsalsa20poly1305/Cargo.toml
@@ -15,7 +15,7 @@ keywords = ["aead", "salsa20", "poly1305", "xsalsa20"]
 categories = ["cryptography", "no-std"]
 
 [dependencies]
-aead = { version = "= 0.3.0-pre", default-features = false }
+aead = { version = "0.3", default-features = false }
 salsa20 = { version = "= 0.5.0-pre", features = ["xsalsa20", "zeroize"] }
 poly1305 = "= 0.6.0-pre"
 rand_core = { version = "0.5", optional = true }
