Update `stream-cipher` dependencies
Updates all dependencies from `RustCrypto/stream-ciphers` to releases
published to https://crates.io

This removes the `[patch.crates-io]` section and means we can finally
release new versions of all crates in this repo 🎉

--- a/aes-siv/Cargo.toml
+++ b/aes-siv/Cargo.toml
@@ -20,7 +20,7 @@ aead = { version = "0.3", default-features = false }
 aes = "0.4"
 cmac = "0.3"
 crypto-mac = { version = "0.8", default-features = false }
-ctr = "= 0.4.0-pre"
+ctr = "0.4"
 dbl = { version = "0.3", default-features = false }
 pmac = { version = "0.3", optional = true }
 stream-cipher = { version = "0.4", default-features = false }
