--- a/crypto_box/Cargo.toml
+++ b/crypto_box/Cargo.toml
@@ -18,7 +18,7 @@ keywords = ["nacl", "libsodium", "public-key", "x25519", "xsalsa20poly1305"]
 
 [dependencies]
 rand_core = "0.5"
-salsa20 = { version = "= 0.5.0-pre", features = ["hsalsa20"] }
+salsa20 = { version = "0.5", features = ["hsalsa20"] }
 zeroize = { version = "1", default-features = false }
 
 [dependencies.x25519-dalek]
@@ -27,7 +27,7 @@ default-features = false
 features = ["u64_backend"]
 
 [dependencies.xsalsa20poly1305]
-version = "= 0.4.0-pre"
+version = "0.4.0-pre"
 default-features = false
 features = ["rand_core"]
 path = "../xsalsa20poly1305"
