--- a/ccm/Cargo.toml
+++ b/ccm/Cargo.toml
@@ -13,12 +13,12 @@ categories = ["cryptography", "no-std"]
 keywords = ["encryption", "aead"]
 
 [dependencies]
-aead = { git = "https://github.com/RustCrypto/traits", branch = "aead_dev", default-features = false }
+aead = { version = "0.3", default-features = false }
 block-cipher = { version = "0.7", default-features = false }
 subtle = { version = "2", default-features = false }
 
 [dev-dependencies]
-aead = { git = "https://github.com/RustCrypto/traits", branch = "aead_dev", features = ["dev"], default-features = false }
+aead = { version = "0.3.2", features = ["dev"], default-features = false }
 aes = "0.4"
 hex-literal = "0.2"
 
