eax: Introduce a streaming variant

--- a/eax/Cargo.toml
+++ b/eax/Cargo.toml
@@ -31,6 +31,7 @@ aead = { version = "0.3", features = ["dev"], default-features = false }
 
 [features]
 default = ["alloc"]
+std = ["aead/std"]
 alloc = ["aead/alloc"]
 heapless = ["aead/heapless"]
 
