Add optional `std` feature to all crates
Disabled-by-default. Closes #204.

This mostly provides a `std::error::Error` impl on `aead::Error`.

--- a/aes-gcm-siv/Cargo.toml
+++ b/aes-gcm-siv/Cargo.toml
@@ -27,6 +27,7 @@ zeroize = { version = "1", default-features = false }
 default = ["aes", "alloc"]
 alloc = ["aead/alloc"]
 heapless = ["aead/heapless"]
+std = ["aead/std", "alloc"]
 
 [package.metadata.docs.rs]
 all-features = true
