--- a/aes-siv/Cargo.toml
+++ b/aes-siv/Cargo.toml
@@ -33,6 +33,7 @@ hex-literal = "0.2"
 default = ["alloc"]
 alloc = ["aead/alloc"]
 heapless = ["aead/heapless"]
+std = ["aead/std", "alloc"]
 
 [package.metadata.docs.rs]
 all-features = true
