--- a/crypto_box/Cargo.toml
+++ b/crypto_box/Cargo.toml
@@ -28,6 +28,12 @@ default-features = false
 features = ["rand_core"]
 path = "../xsalsa20poly1305"
 
+[dependencies.chacha20poly1305]
+version = "0.6"
+default-features = false
+features = ["xchacha20poly1305"]
+path = "../chacha20poly1305"
+
 [dev-dependencies]
 rand = "0.7"
 
