--- a/aes-gcm/Cargo.toml
+++ b/aes-gcm/Cargo.toml
@@ -17,9 +17,9 @@ categories = ["cryptography", "no-std"]
 
 [dependencies]
 aead = { version = "0.3", default-features = false }
-aes = { version = "0.5", optional = true }
-block-cipher = "0.8"
-ctr = "0.6.0-pre"
+aes = { version = "0.6", optional = true }
+cipher = "0.2"
+ctr = "0.6"
 ghash = { version = "0.3", default-features = false }
 subtle = { version = "2", default-features = false }
 zeroize = { version = "1", optional = true, default-features = false }
