--- a/aes-siv/Cargo.toml
+++ b/aes-siv/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "aes-siv"
-version = "0.4.0"
+version = "0.5.0-pre"
 description = """
 Pure Rust implementation of the AES-SIV Misuse-Resistant Authenticated
 Encryption Cipher (RFC 5297) with optional architecture-specific
@@ -16,14 +16,14 @@ keywords = ["aead", "aes", "encryption", "siv"]
 categories = ["cryptography", "no-std"]
 
 [dependencies]
-aead = { version = "0.3", default-features = false }
-aes = "0.5"
-cmac = "0.4"
-crypto-mac = { version = "0.9", default-features = false }
-ctr = "0.5"
-dbl = { version = "0.3", default-features = false }
-pmac = { version = "0.4", optional = true }
-stream-cipher = { version = "0.7", default-features = false }
+aead = "0.3"
+aes = "0.6"
+cipher = "0.2"
+cmac = "0.5"
+crypto-mac = "0.10"
+ctr = "0.6"
+dbl = "0.3"
+pmac = "0.5"
 zeroize = { version = "1", default-features = false }
 
 [dev-dependencies]
