--- a/crypto_box/Cargo.toml
+++ b/crypto_box/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "crypto_box"
-version = "0.4.0"
+version = "0.5.0-pre"
 description = """
 Pure Rust implementation of NaCl's crypto_box public-key authenticated
 encryption primitive which combines the X25519 Elliptic Curve Diffie-Hellman
@@ -18,21 +18,21 @@ keywords = ["nacl", "libsodium", "public-key", "x25519", "xsalsa20poly1305"]
 
 [dependencies]
 rand_core = "0.5"
-salsa20 = { version = "0.6", features = ["hsalsa20"] }
+salsa20 = { version = "0.7", features = ["hsalsa20"] }
 x25519-dalek = { version = "1", default-features = false }
 zeroize = { version = "1", default-features = false }
 
-[dependencies.xsalsa20poly1305]
-version = "0.5"
-default-features = false
-features = ["rand_core"]
-path = "../xsalsa20poly1305"
-
 [dependencies.chacha20poly1305]
-version = "0.6"
+version = "0.7.0-pre"
 default-features = false
 features = ["xchacha20poly1305"]
 path = "../chacha20poly1305"
+
+[dependencies.xsalsa20poly1305]
+version = "0.6.0-pre"
+default-features = false
+features = ["rand_core"]
+path = "../xsalsa20poly1305"
 
 [dev-dependencies]
 rand = "0.7"
