--- a/ccm/Cargo.toml
+++ b/ccm/Cargo.toml
@@ -19,7 +19,7 @@ subtle = { version = "2", default-features = false }
 
 [dev-dependencies]
 aead = { version = "0.3.2", features = ["dev"], default-features = false }
-aes = "0.7.0-pre"
+aes = { version = "=0.7.0-pre", features = ["force-soft"] } # Uses `force-soft` for MSRV 1.41
 hex-literal = "0.2"
 
 [features]
