--- a/eax/Cargo.toml
+++ b/eax/Cargo.toml
@@ -26,7 +26,7 @@ ctr = "0.7.0-pre.3"
 subtle = { version = "2", default-features = false }
 
 [dev-dependencies]
-aes = "0.7.0-pre"
+aes = { version = "=0.7.0-pre", features = ["force-soft"] } # Uses `force-soft` for MSRV 1.41
 aead = { version = "0.3", features = ["dev"], default-features = false }
 
 [features]
