chacha20poly1305: bump `chacha20` crate; MSRV 1.49+
Like we did with the `aes` crate in #252, this bumps the `chacha20`
crate to a version which implements runtime CPU feature detection
(AVX2/SSE2) and uses new support for `ManuallyDrop` union fields which
became available in Rust 1.49.

--- a/.github/workflows/aes-gcm-siv.yml
+++ b/.github/workflows/aes-gcm-siv.yml
@@ -25,7 +25,7 @@ jobs:
           - 1.49.0 # MSRV
           - stable
         target:
-          # - armv7-none-eabi TODO: test after MSRV is bumped to 1.42
+          - armv7a-none-eabi
           - thumbv7em-none-eabi
           - wasm32-unknown-unknown
     steps:
