--- a/aes-gcm/Cargo.toml
+++ b/aes-gcm/Cargo.toml
@@ -25,6 +25,7 @@ subtle = { version = "2", default-features = false }
 zeroize = { version = "1", optional = true, default-features = false }
 
 [dev-dependencies]
+aead = { version = "0.4", features = ["dev"], default-features = false }
 hex-literal = "0.2"
 
 [features]
