--- a/aes-gcm-siv/Cargo.toml
+++ b/aes-gcm-siv/Cargo.toml
@@ -24,6 +24,9 @@ polyval = { version = "=0.5.0-pre", default-features = false }
 subtle = { version = "2", default-features = false }
 zeroize = { version = "1", default-features = false }
 
+[dev-dependencies]
+aead = { version = "0.4", features = ["dev"], default-features = false }
+
 [features]
 default = ["aes", "alloc"]
 std = ["aead/std", "alloc"]
