--- a/.github/workflows/benches.yml
+++ b/.github/workflows/benches.yml
@@ -1,34 +1,35 @@
-name: benches
-
-on:
-  pull_request:
-    paths:
-      - "benches/**"
-      - "Cargo.*"
-  push:
-    branches: master
-
-defaults:
-  run:
-    working-directory: benches
-
-env:
-  CARGO_INCREMENTAL: 0
-  RUSTFLAGS: "-Dwarnings"
-
-jobs:
-  build:
-    runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        rust:
-          - 1.41.0 # MSRV
-          - stable
-    steps:
-      - uses: actions/checkout@v1
-      - uses: actions-rs/toolchain@v1
-        with:
-          profile: minimal
-          toolchain: ${{ matrix.rust }}
-          override: true
-      - run: cargo build --release
+# TODO(tarcieri): re-enable after UHFs are bumped
+#name: benches
+#
+#on:
+#  pull_request:
+#    paths:
+#      - "benches/**"
+#      - "Cargo.*"
+#  push:
+#    branches: master
+#
+#defaults:
+#  run:
+#    working-directory: benches
+#
+#env:
+#  CARGO_INCREMENTAL: 0
+#  RUSTFLAGS: "-Dwarnings"
+#
+#jobs:
+#  build:
+#    runs-on: ubuntu-latest
+#    strategy:
+#      matrix:
+#        rust:
+#          - 1.41.0 # MSRV
+#          - stable
+#    steps:
+#      - uses: actions/checkout@v1
+#      - uses: actions-rs/toolchain@v1
+#        with:
+#          profile: minimal
+#          toolchain: ${{ matrix.rust }}
+#          override: true
+#      - run: cargo build --release
