--- a/aes-siv/Cargo.toml
+++ b/aes-siv/Cargo.toml
@@ -17,11 +17,11 @@ categories = ["cryptography", "no-std"]
 
 [dependencies]
 aead = "0.4"
-aes = "=0.7.0-pre"
+aes = "0.7"
 cipher = "0.3"
 cmac = "=0.6.0-pre"
 crypto-mac = "0.11"
-ctr = "=0.7.0-pre.4"
+ctr = "0.7"
 dbl = "0.3"
 pmac = "=0.6.0-pre"
 zeroize = { version = "1", default-features = false }
