--- a/crypto_box/Cargo.toml
+++ b/crypto_box/Cargo.toml
@@ -23,7 +23,7 @@ x25519-dalek = { version = "1", default-features = false }
 zeroize = { version = "1", default-features = false }
 
 [dependencies.chacha20poly1305]
-version = "=0.8.0-pre"
+version = "0.8"
 default-features = false
 features = ["xchacha20poly1305"]
 path = "../chacha20poly1305"
