--- a/crypto_box/Cargo.toml
+++ b/crypto_box/Cargo.toml
@@ -29,7 +29,7 @@ features = ["xchacha20poly1305"]
 path = "../chacha20poly1305"
 
 [dependencies.xsalsa20poly1305]
-version = "=0.7.0-pre"
+version = "0.7"
 default-features = false
 features = ["rand_core"]
 path = "../xsalsa20poly1305"
