--- a/aes-gcm-siv/Cargo.toml
+++ b/aes-gcm-siv/Cargo.toml
@@ -17,9 +17,9 @@ categories = ["cryptography", "no-std"]
 
 [dependencies]
 aead = { version = "0.4", default-features = false }
-aes = { version = "0.7.5", optional = true }
-cipher = "0.3"
-ctr = "0.8"
+aes = { version = "0.8", optional = true }
+cipher = "0.4"
+ctr = "0.9"
 polyval = { version = "0.5.1", default-features = false }
 subtle = { version = "2", default-features = false }
 zeroize = { version = "1", default-features = false }
@@ -31,8 +31,8 @@ aead = { version = "0.4", features = ["dev"], default-features = false }
 default    = ["aes", "alloc"]
 std        = ["aead/std", "alloc"]
 alloc      = ["aead/alloc"]
-armv8      = ["aes/armv8", "polyval/armv8"] # nightly-only
-force-soft = ["aes/force-soft", "polyval/force-soft"]
+armv8      = ["polyval/armv8"] # nightly-only
+force-soft = ["polyval/force-soft"]
 heapless   = ["aead/heapless"]
 stream     = ["aead/stream"]
 
